--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,8 @@
 <!doctype html>
-<title>{{ page.title }}</title> </head>
+
+{% include header.html %}
+
+<body>
     {{ content }}
+</body>
 </html>
