--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <head>
 	<script src="//use.typekit.net/vai7vfg.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="{{ "/css/styles.css" | prepend: site.baseurl }}">
 </head>
