--- a/css/styles.sass
+++ b/css/styles.sass
@@ -10,10 +10,10 @@ a
 	color: #000
 h1
 	font-size: 3.6em
-	margin-bottom: 0.1em
+	margin: 1em 0 0.1em 0
 h2
-	margin-bottom: 0.1em
+	margin: 1em 0 0.1em 0
 h3
-	margin-bottom: 0.1em
+	margin: 1em 0 0.1em 0 
 h4
-	margin-bottom: 0.1em
+	margin: 1em 0 0.1em 0
