--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,4 +2,5 @@
 	<script src="//use.typekit.net/vai7vfg.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 	<link rel="stylesheet" href="{{ "/css/styles.css" | prepend: site.baseurl }}">
+	<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
 </head>
