Added topbar and a post wrapper

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -3,8 +3,8 @@
 ---
 
 body
-	padding: 10% 25%
-	line-height: 1.3
+	padding: 5%
+	line-height: 1.35
 	font-size: 1.2em
 a
 	color: #000
@@ -17,3 +17,6 @@ h3
 	margin: 1em 0 0.1em 0 
 h4
 	margin: 1em 0 0.1em 0
+#post-wrapper
+	margin: 0 auto
+	max-width: 600px
