--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
 <!doctype html>
-
 {% include header.html %}
-
+{% include topbar.html %}
 <body>
     {{ content }}
+{% include footer.html %}
 </body>
 </html>
