--- a/css/styles.sass
+++ b/css/styles.sass
@@ -10,8 +10,10 @@ a
 	color: #000
 h1
 	font-size: 3.6em
+	font-weight: 900
 	margin: 1em 0 0.1em 0
 h2
+	font-size: 3.6em
 	margin: 1em 0 0.1em 0
 h3
 	margin: 1em 0 0.1em 0 
