--- a/css/styles.sass
+++ b/css/styles.sass
@@ -12,6 +12,7 @@ h1
 	font-size: 1em
 	font-weight: normal
 	margin: 1em 0 0.1em 0
+	line-height: 1em
 h2
 	font-size: 3.6em
 	margin: 1em 0 0.1em 0
