--- a/css/styles.sass
+++ b/css/styles.sass
@@ -17,9 +17,11 @@ h2
 	margin: 1em 0 0.1em 0
 	line-height: 1em
 h3
+	font-size: 2.4em
 	margin: 1em 0 0.1em 0
 	line-height: 1em 
 h4
+	font-size: 1.8em
 	margin: 1em 0 0.1em 0
 	line-height: 1em
 #post-wrapper
