--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,4 +3,5 @@
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 	<link rel="stylesheet" href="{{ "/css/styles.css" | prepend: site.baseurl }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
+	<meta name=viewport content="width=device-width, initial-scale=1">
 </head>
