Type sizes for device widths

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -27,6 +27,12 @@ h4
 #post-wrapper
 	margin: 0 auto
 	max-width: 600px
-@media only screen and (max-width: 768px)
+@media screen and (max-device-width: 1024px)
 	body
-		font-size: 20px
+		font-size: 0.9em
+@media screen and (max-device-width: 768px)
+	body
+		font-size: 0.8em
+@media screen and (max-device-width: 640px)
+	body
+		font-size: 0.7em
