--- a/css/styles.sass
+++ b/css/styles.sass
@@ -24,6 +24,8 @@ h4
 	font-size: 1.8em
 	margin: 1em 0 0.1em 0
 	line-height: 1em
+img
+	max-width: 100%
 #post-wrapper
 	margin: 0 auto
 	max-width: 600px
