--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,4 +1,4 @@
-<form action="https://formspree.io/mistergough@gmail.com”
+<form action="https://formspree.io/mistergough@gmail.com"
       method="POST">
 <input type="text" name="name">
 <input type="email" name="_replyto">
