--- a/_includes/form.html
+++ b/_includes/form.html
@@ -3,4 +3,5 @@
 <input type="text" name="name">
 <input type="email" name="_replyto">
 <input type="submit" value="Send">
+<input type="hidden" name="_next" value="//mistergough.com">
 </form>
