Added thanks page.

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -3,38 +3,51 @@
 ---
 
 body
-	padding: 5%
-	line-height: 1.35
-	font-size: 1.2em
+    padding: 5%
+    line-height: 1.35
+    font-size: 1.2em
 a
-	color: #000
+    color: #000
 h1
-	font-size: 1em
-	font-weight: normal
-	margin: 1em 0 0.1em 0
+    font-size: 1em
+    font-weight: normal
+    margin: 1em 0 0.1em 0
 h2
-	font-size: 3.6em
-	margin: 1em 0 0.1em 0
-	line-height: 1em
+    font-size: 3.6em
+    margin: 1em 0 0.1em 0
+    line-height: 1em
 h3
-	font-size: 2.4em
-	margin: 1em 0 0.1em 0
-	line-height: 1em 
+    font-size: 2.4em
+    margin: 1em 0 0.1em 0
+    line-height: 1em 
 h4
-	font-size: 1.8em
-	margin: 1em 0 0.1em 0
-	line-height: 1em
+    font-size: 1.8em
+    margin: 1em 0 0.1em 0
+    line-height: 1em
 img
-	max-width: 100%
+    max-width: 100%
+form
+    margin: 1em 0
+input
+    width: 50%
+    font-size: 1em
+    padding: 0.5em
+    margin-bottom: 1em
+textarea
+    width: 100%
+    height: 5em
+    font-size: 1em
+    padding: 0.5em
+    margin-bottom: 1em
 #post-wrapper
-	margin: 0 auto
-	max-width: 600px
+    margin: 0 auto
+    max-width: 600px
 @media screen and (max-device-width: 1024px)
-	body
-		font-size: 0.9em
+    body
+        font-size: 0.9em
 @media screen and (max-device-width: 768px)
-	body
-		font-size: 0.8em
+    body
+        font-size: 0.8em
 @media screen and (max-device-width: 640px)
-	body
-		font-size: 0.7em
+    body
+        font-size: 0.7em
