--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,7 +1,8 @@
 <form action="https://formspree.io/mistergough@gmail.com"
       method="POST">
-<input type="text" name="name">
-<input type="email" name="_replyto">
+<input type="text" name="name" placeholder="Name"><br>
+<input type="email" name="email" placeholder="Email"><br>
+<textarea name="message" placeholder="Message"></textarea>
 <input type="submit" value="Send">
 <input type="hidden" name="_next" value="http://mistergough.com">
 </form>
