--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@
 	{% include topbar.html %}
 	<body>
 	<h2>{{ page.title }}</h2>
-        <img src="{{ site.baseurl }}/images/{{ page.image }}">
+        {% if page.image %}<img src="{{ site.baseurl }}/images/{{ page.image }}">{% endif %}
     	{{ content }}
 	{% if page.comments %}
 	<div id="disqus_thread"></div> <script type="text/javascript">
