--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@
   {% else %}{{ d }}th
   {% endcase %}, 
 {{ page.date | date: "%Y" }}</em>
-        <img src="{{ site.url }}/images/{{ post.image }}">
+        {% if page.image %}<img src="{{ site.baseurl }}/images/{{ page.image }}">{% endif %}
     	{{ content }}
 	{% if page.comments %}
 	<div id="disqus_thread"></div> <script type="text/javascript">
