--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,10 @@
 <head>
 	<script src="//use.typekit.net/vai7vfg.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
-	<link rel="stylesheet" href="{{ "/css/styles.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ '/css/styles.css' | prepend: site.baseurl }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
     <link rel="stylesheet" href="https://use.typekit.net/vai7vfg.css">
+	<link href="{{ '/css/lightbox.min.css' | prepend: site.baseurl }}" rel="stylesheet" />
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<title>{{ site.title }} | {{ page.title }}</title>
 	<meta name="description" content="{{ site.description }}">
