--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,5 +4,6 @@
 <body class="wide">
     {{ content }}
 {% include footer.html %}
+<script src="{{ "/js/lightbox-plus-jquery.min.js" | prepend: site.baseurl }}"></script>
 </body>
 </html>
