--- a/css/styles.sass
+++ b/css/styles.sass
@@ -75,7 +75,7 @@ img
 body.page img
     max-width: 25%
     float: right
-    margin: 0 0 0 1em
+    margin: 0 0 1em 1em
 form
     margin: 1em 0
 input
