--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,2 +1,2 @@
-<h1><a href="{{ site.url }}">{{ site.title }}</a> | <a href="{{ site.url }}blog">Blog</a> | <a href="{{ site.url }}photos">Photos</a> | <a href="https://github.com/mistergough/mistergough.github.io">Source</a></h1>
+<h1><a href="{{ site.url }}">{{ site.title }}</a> | <a href="{{ site.url }}teaching">Teaching</a> | <a href="{{ site.url }}blog">Blog</a> | <a href="{{ site.url }}photos">Photos</a> | <a href="https://github.com/mistergough/mistergough.github.io">Source</a></h1>
 <div id="post-wrapper">
